# stellaris-explorer

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_template.yml  cicd_template.yml  documentation_template.yml  feature_template.yml  security_template.yml  test_template.yml
.github/workflows/: test_stellaris_explorer.yml
app/frontend/: dashboard.py
docs/: about.md  index.md  testing.md
pauls_playground/task1/: data_compare.py  data_reader.py  main.py
tests/: test_example_1.py  test_example_2.py  test_main.py
tests/test_app/test_frontend/: test_dashboard.py
