[build-system]
requires = ['setuptools >= 42', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = '--cov --cov-report=html:coverage --template=html1/index.html --report=./coverage/index_report.html' # --headless
testpaths = 'tests'
# Log
log_cli = true
log_level = 'INFO'
log_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_date_format = '%Y-%m-%d %H:%M:%S'
log_file_level = 'INFO'
# Test Configs
python_files = 'test_*.py'
python_functions = 'test_*'
python_classes = '*TestSuite'
